<resources>
    <string name="app_name">Attendance Manager</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_feature_list">Feature List</string>
    <string name="class_name">Class Name</string>
    <string-array name="class_values">
        <item>BEITA</item>
        <item>BEITB</item>
        <item>TEITA</item>
        <item>SEITB</item>
    </string-array>
    <string name="ok">Ok</string>
    <string name="title_activity_provide_class">Provide Class Detail</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="add_class">Add class(+)</string>
    <string name="view_attendance">View Attendance</string>
    <string name="title_activity_class_detail">ClassDetail</string>
    <string name="beitb">BEITB</string>
    <string name="no_of_student">No Of Student</string>
    <string name="enter_student_details">Enter Student Details</string>
    <string name="title_activity_view_attendance">View Attendance</string>
    <string name="total_attendance">Total Attendance</string>
    <string name="monthly_attendance">Monthly Attendance</string>
    <string name="title_activity_select_month">Select Month</string>
    <string name="select_month">Select Month</string>
    <string-array name="month_values">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="subject_values">
        <item>SPM</item>
        <item>WT</item>
        <item>SWS</item>
    </string-array>
    <string name="defaulters">Defaulters List</string>
    <string name="subject">Subject</string>
    <string name="take_view_attendance">Take/View Attendance</string>
    <string name="new_register">New User? Register here!!</string>
    <string name="title_activity_registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title_activity_take_attendance">Take Attendance</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="roll_no">Roll No</string>
    <string name="student_name">Student Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_student_details">StudentDetails</string>
    <string name="title_activity_total_attendance_list">TotalAttendanceList</string>
    <string name="title_activity_defaulter_list">DefaulterListActivity</string>
    <string name="Select_class">Select Class</string>
</resources>
