<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myapplication.TakeAttendanceActivity">
    <TextView
        android:id="@+id/class_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/beitb"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/roll_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/roll_no"
        android:layout_below="@+id/class_name"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/student_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="40sp"
        android:textStyle="italic"
        android:text="@string/student_name"
        android:layout_below="@+id/roll_no"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/present"
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:text="@string/present"
        android:background="@drawable/green_round_button"
        android:onClick="onPresent"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp" />
    <Button
        android:id="@+id/absent"
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:text="@string/absent"
        android:background="@drawable/red_round_button"
        android:onClick="onAbsent"
        android:textStyle="bold"
        android:layout_alignTop="@+id/present"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
