<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myapplication.ClassDetail"
    >

    <TextView
        android:id="@+id/class_name_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:text="@string/class_name"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/class_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/class_name_text"
        android:hint="@string/beitb"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/no_of_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/no_of_student"
        android:layout_below="@+id/class_value"
        android:textSize="25sp"
        />
    <EditText
        android:id="@+id/no_of_student_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_of_student"
        android:layout_marginTop="15dp"
        android:inputType="number"
        />
    <TextView
        android:id="@+id/subject"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/no_of_student_value"
        android:text="@string/subject"
        android:textSize="30sp"
        android:layout_marginTop="15dp"

        />
    <EditText
        android:id="@+id/subject_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/enter_details"
        android:textColor="#FFFFFF"
        android:layout_height="38dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:text="@string/enter_student_details"
        android:textSize="25sp"
        android:onClick="onEnterStudentDetails"

        />
</RelativeLayout>

