<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myapplication.ProvideClassActivity">

    <TextView
        android:id="@+id/class_name"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_name"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        />
    <Spinner
        android:id="@+id/classes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/class_name"
        android:layout_marginTop="15dp"
        android:entries="@array/class_values"
        />
    <TextView
        android:id="@+id/subject"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/classes"
        android:text="@string/subject"
        android:textSize="30sp"

        />
    <Spinner
        android:id="@+id/subject_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject"
        android:layout_marginTop="15dp"
        android:entries="@array/subject_values"
        />

    <RadioGroup
        android:id="@+id/operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject_value"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/take_attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_attendance"/>
       <RadioButton
           android:id="@+id/view_attendance"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:text="@string/view_attendance"
           />
        </RadioGroup>
    <Button
        android:id="@+id/class_submit"
        android:textColor="#FFFFFF"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:text="@string/ok"
        android:background="@drawable/buttonshape"
        android:textSize="25dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:onClick="onSubmit"
        />

</RelativeLayout>
