<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myapplication.LoginActivity">

    <TextView
        android:id="@+id/user_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/user_name"
        android:textSize="25dp"
        android:layout_alignParentLeft="true"
        />
    <EditText
        android:id="@+id/user_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_marginTop="15dp"
        android:visibility="visible" />
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_value"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:layout_alignParentLeft="true"
        android:text="@string/password"
        />
    <EditText
        android:id="@+id/password_value"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_below="@+id/password"
        android:layout_marginTop="15dp"
        android:visibility="visible" />
    <Button
        android:id="@+id/login_button"
        android:textColor="#FFFFFF"
        android:layout_height="38dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:text="@string/login"
        android:layout_below="@+id/password_value"
        android:layout_marginTop="15dp"
        android:textSize="25dp"
        android:onClick="onLogin"
        />
    <Button
        android:id="@+id/register"
        android:textColor="#FFFFFF"
        android:layout_height="38dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="30dp"
        android:layout_alignParentBottom="true"
        android:text="@string/new_register"
        android:textSize="20sp"
        android:onClick="onNewRegister"
        />
</RelativeLayout>

