<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.myapplication.StudentDetails"
    android:weightSum="1">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/roll_no"
        android:layout_marginTop="20dp"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/roll_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.14" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:layout_marginTop="50dp"

        android:textSize="30sp" />
    <EditText
        android:id="@+id/student_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.06" />
    <Button
        android:id="@+id/next"
        android:textColor="#FFFFFF"
        android:layout_height="38dp"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonshape"
        android:text="@string/next"
        android:textSize="20sp"
        android:onClick="onNext"
        />
</LinearLayout>
