<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myapplication.RegistrationActivity">
    <TextView
        android:id="@+id/user_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/user_name"
        android:textSize="25sp"

        />
    <EditText
        android:id="@+id/user_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/user_name"
        />
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/user_name_value"
        android:text="@string/password"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        />
    <EditText
        android:id="@+id/password_value"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:inputType="textPassword"

        />
    <TextView
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/password_value"
        android:text="@string/confirm_password"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        />
    <EditText
        android:id="@+id/confirm_password_value"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password"
        />
    <Button
        android:id="@+id/register"
        android:textColor="#FFFFFF"
        android:layout_height="38dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="25dp"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:textSize="25sp"
        android:onClick="onRegister"
        />

    </RelativeLayout>

