<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myapplication.ViewAttendanceActivity">

    <Button
        android:id="@+id/total_attendance"
        android:textColor="#FFFFFF"
        android:layout_height="38dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:text="@string/total_attendance"
        android:background="@drawable/buttonshape"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:onClick="onTotalAttendance"
        />
   <Button
       android:id="@+id/monthly_attendance"
       android:textColor="#FFFFFF"
       android:layout_height="38dp"
       android:layout_width="300dp"
       android:layout_centerHorizontal="true"
       android:background="@drawable/buttonshape"
       android:layout_below="@+id/total_attendance"
       android:layout_marginTop="15dp"
       android:text="@string/monthly_attendance"
       android:textSize="25sp"
       android:onClick="onMonthlyAttendance"
       />
    <Button
        android:id="@+id/defaulters"
        android:textColor="#FFFFFF"
        android:layout_height="38dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:layout_below="@+id/monthly_attendance"
        android:layout_marginTop="15dp"
        android:text="@string/defaulters"
        android:textSize="25sp"
        android:onClick="onDefaulters"
        />
</RelativeLayout>
